afegir scroll view

--- a/TwoChange/app/src/main/res/layout/activity_about.xml
+++ b/TwoChange/app/src/main/res/layout/activity_about.xml
@@ -6,56 +6,68 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="pes.twochange.presentation.controller.AboutActivity">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:src="@mipmap/header"
-        android:scaleType="fitStart" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="22sp"
-        android:textStyle="bold"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:text="@string/about"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:inputType="textMultiLine"
-        android:text="@string/about_slogan"
-        android:textStyle="bold"
-        android:textColor="@color/colorPrimary"
-        android:textSize="16sp"
-        android:scrollbars="vertical" />
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:src="@mipmap/header"
+            android:scaleType="fitStart" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:text="@string/about"/>
 
-    <TextView
-        android:id="@+id/aboutField"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:inputType="textMultiLine"
-        android:text="@string/about_text"
-        android:textSize="16sp"
-        android:scrollbars="vertical" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:autoLink="web"
-        android:inputType="textUri"
-        android:textSize="16sp"
-        android:text="@string/about_url"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:inputType="textMultiLine"
+            android:text="@string/about_slogan"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimary"
+            android:textSize="16sp"
+            android:scrollbars="vertical" />
+
+        <TextView
+            android:id="@+id/aboutField"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:inputType="textMultiLine"
+            android:text="@string/about_text"
+            android:textSize="16sp"
+            android:scrollbars="vertical" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="20dp"
+            android:autoLink="web"
+            android:inputType="textUri"
+            android:textSize="16sp"
+            android:text="@string/about_url"/>
+        </LinearLayout>
+
+    </ScrollView>
 
 
 </LinearLayout>
