bug de quan es puntuava un usuari que no s'actualitzava la seva puntuacio + toast de quan es bloqueja un usuari + toast de quan es deshabiliten les notificacions

--- a/TwoChange/app/src/main/res/menu/menu_user_profile.xml
+++ b/TwoChange/app/src/main/res/menu/menu_user_profile.xml
@@ -8,7 +8,7 @@
     <item
         android:id="@+id/action_block"
         android:orderInCategory="100"
-        android:title="Block user"
+        android:title="Block/Unblock user"
         app:showAsAction="never" />
     <item
         android:id="@+id/action_open_chat"
