--- a/TwoChange/app/src/main/res/menu/menu_my_profile.xml
+++ b/TwoChange/app/src/main/res/menu/menu_my_profile.xml
@@ -8,7 +8,7 @@
     <item
         android:id="@+id/action_desactivar"
         android:orderInCategory="100"
-        android:title="Disable notifications"
+        android:title="Disable/Enable notifications"
         app:showAsAction="never" />
     <item
         android:id="@+id/action_editar_perfil"
