--- a/TwoChange/app/src/main/res/menu/menu_chat.xml
+++ b/TwoChange/app/src/main/res/menu/menu_chat.xml
@@ -2,17 +2,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="pes.twochange.presentation.controller.ChatActivity">
-    <item
-        android:id="@+id/action_photo"
-        android:icon="@drawable/ic_camera_enhance_white_24dp"
-        android:title="@string/action_photo"
-        app:showAsAction="always" />
     <group>
         <item
             android:title="Send contact details"
             android:id="@+id/send_details"/>
         <item
-            android:title="Block this user"
+            android:title="Block/Unblock this user"
             android:id="@+id/block_user"/>
     </group>
 </menu>
