--- a/TwoChange/app/src/main/res/layout/activity_about.xml
+++ b/TwoChange/app/src/main/res/layout/activity_about.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:src="@mipmap/header"
-            android:scaleType="fitStart" />
+            android:scaleType="centerCrop" />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
