--- a/TwoChange/app/src/main/res/layout/activity_splash.xml
+++ b/TwoChange/app/src/main/res/layout/activity_splash.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/green_100"
+    android:background="@mipmap/background_splash"
     tools:context="pes.twochange.presentation.controller.SplashActivity">
 
     <ImageView
@@ -14,8 +14,23 @@
         android:layout_width="256dp"
         android:layout_height="256dp"
         android:layout_marginTop="96dp"
+        android:layout_marginBottom="16dp"
         android:layout_centerHorizontal="true"
         android:src="@mipmap/ic_launcher_icon4"/>
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_splash"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/logo_image"
+        app:cardBackgroundColor="@color/green_100"
+        android:visibility="gone"
+        app:cardCornerRadius="8dp">
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/name"
@@ -25,9 +40,8 @@
         android:textSize="32sp"
         android:text="2CHANGE"
         android:textColor="@color/black"
-        android:layout_below="@+id/logo_image"
+        android:layout_alignParentTop="true"
         android:layout_marginTop="16dp"
-        android:visibility="gone"
         />
     <TextView
         android:id="@+id/slogan"
@@ -38,7 +52,8 @@
         android:text="2nd chance for everything"
         android:layout_below="@+id/name"
         android:layout_marginTop="4dp"
-        android:visibility="gone"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         />
 
     <ProgressBar
@@ -48,7 +63,11 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/slogan"
         android:layout_marginTop="16dp"
-        android:visibility="gone"
+        android:layout_marginBottom="16dp"
         />
+
+    </RelativeLayout>
+
+    </android.support.v7.widget.CardView>
 
 </RelativeLayout>
