--- a/TwoChange/app/src/main/res/layout/product_item_view.xml
+++ b/TwoChange/app/src/main/res/layout/product_item_view.xml
@@ -4,7 +4,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="4dp">
+    android:paddingStart="8dp"
+    android:paddingEnd="8dp"
+    android:paddingTop="4dp"
+    android:paddingBottom="4dp">
 
     <ImageView
         android:id="@+id/product_item_image"
@@ -51,7 +54,7 @@
         android:textColor="@color/black"
         android:gravity="center"
         android:text="90"
-        android:layout_alignParentEnd="true"/>
+        android:layout_alignParentEnd="true" />
 
 
 </RelativeLayout>
